correcion de editar